--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/aos.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
-    <!-- <script src="scrips/script.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+    <script src="scrips/jquery.smoothwheel.js"></script>
+    <script>
+
+        $(document).ready(function(){
+            $("body").smoothWheel()
+        });
+
+    </script>
 </head>
 <body>
     <header>
@@ -22,7 +29,7 @@
             <a href="mailto:Robindavidsson@outlook.com" id="mail">Mail</a>
         </nav>
     </header>
-    <main>
+    <main id="main">
         <!-- Background lines -->
         <div id="grid">
             <div class="gridline"></div>
@@ -66,9 +73,13 @@
     <footer>
 
     </footer>
+
     <script type="text/javascript" src="scrips/aos.js"></script>
     <script type="text/javascript">
         AOS.init();
+    </script>
+    <script type="text/javascript">
+    
     </script>
 </body>
 
