--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/aos.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-    <script src="scrips/jquery.smoothwheel.js"></script>
+    <script src="scripts/jquery.smoothwheel.js"></script>
     <script>
 
         $(document).ready(function(){
@@ -74,7 +74,7 @@
 
     </footer>
 
-    <script type="text/javascript" src="scrips/aos.js"></script>
+    <script type="text/javascript" src="scripts/aos.js"></script>
     <script type="text/javascript">
         AOS.init();
     </script>
