--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
     <script src="scripts/jquery.smoothwheel.js"></script>
+    <script src="scripts/script.js"></script>
     <script>
-
         $(document).ready(function(){
             $("body").smoothWheel()
         });
@@ -20,7 +20,7 @@
     </script>
 </head>
 <body>
-    <header>
+    <header id="header">
         <nav id="nav">
             <a href="https://www.linkedin.com/in/robin-davidsson/" id="linkedIn">LinkedIn</a>
             <a href="https://www.facebook.com/robin.davidsson.1" id="facebook">Facebook</a>
@@ -64,22 +64,22 @@
             </div>
         </div>
         <div id="foliodiv">
-
+            <h3>Website name placeholder</h3>
+            <div id="folioitem1"></div>
+            <h3>Website name placeholder</h3>
+            <div id="folioitem2"></div>
+            <h3>Website name placeholder</h3>
+            <div id="folioitem3"></div>
+            
         </div>
         <div id="interesteddiv">
-
+            <h3>If you are interested, contact me through any of the following links:</h3>
         </div>
     </main>
-    <footer>
-
-    </footer>
 
     <script type="text/javascript" src="scripts/aos.js"></script>
     <script type="text/javascript">
         AOS.init();
-    </script>
-    <script type="text/javascript">
-    
     </script>
 </body>
 
