--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Robin Davidsson | Front-end and Back-end developer</title>
+    <title>Robin Davidsson | Front-end & Back-end Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/aos.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
     <script src="scripts/jquery.smoothwheel.js"></script>
     <script src="scripts/script.js"></script>
     <script>
@@ -22,10 +22,10 @@
 <body>
     <header id="header">
         <nav id="nav">
-            <a href="https://www.linkedin.com/in/robin-davidsson/" id="linkedIn">LinkedIn</a>
-            <a href="https://www.facebook.com/robin.davidsson.1" id="facebook">Facebook</a>
-            <a href="#" id="github">Github</a>
-            <a href="#" id="twitter">Twitter</a>
+            <a href="https://www.linkedin.com/in/robin-davidsson/" id="linkedIn">LinkedIn </a>
+            <a href="https://www.facebook.com/robin.davidsson.1" id="facebook">Facebook </a>
+            <a href="https://github.com/Vanillj" id="github">Github </a>
+            <a href="#" id="twitter">Twitter </a>
             <a href="mailto:Robindavidsson@outlook.com" id="mail">Mail</a>
         </nav>
     </header>
@@ -40,17 +40,17 @@
         </div>
         
         <div id="introdiv">
-            <h4>
+            <h4 >
                 Hello<span class="redspan">,</span>
-                <br>I am Robin<span class="bluespan">.</span>
+                <br>and welcome<span class="bluespan">.</span>
             </h4>
-            <p>
+            <p id="info">
                 Front-End Developer <br> and Back-End Developer <br> based in Sweden.
             </p>
         </div>
         <div id="aboutdiv">
             <h4 data-aos="slide-right">About<br><span class="bluespan">_</span>me<span class="redspan">:</span></h4>
-            <p class="aboutmeinfo" data-aos="fade-in" >
+            <p class="aboutmeinfo" id="aboutmeinfo" data-aos="fade-in" >
                 I am a Front-End and Back-End Developer based in Sweden. 
                 I am a dreamer and a fanatic of all digital things. 
                 I always try my best to expand my knownledge in all digital areas. 
@@ -60,23 +60,31 @@
                 <h3>Skills<span class="redspan">:</span></h3>
                 <p><span class="redspan"><i class="fas fa-certificate" style="font-size: 20px;"></i></span> Front-End Development (HTML5 & CSS)</p>
                 <p><span class="redspan"><i class="fas fa-certificate" style="font-size: 20px;"></i></span> Back-End Development (C#, ASP.NET)</p>
-                <p><span class="redspan"><i class="fas fa-certificate" style="font-size: 20px;"></i></span> Web Design</p>
+                <p><span class="redspan"><i class="fas fa-certificate" style="font-size: 20px;"></i></span> Java</p>
             </div>
         </div>
         <div id="foliodiv">
+            <h4 data-aos="slide-right">Earlier work<span class="redspan">.</span></h4>
             <h3>Website name placeholder</h3>
             <div id="folioitem1"></div>
             <h3>Website name placeholder</h3>
             <div id="folioitem2"></div>
             <h3>Website name placeholder</h3>
             <div id="folioitem3"></div>
-            
         </div>
         <div id="interesteddiv">
             <h3>If you are interested, contact me through any of the following links:</h3>
         </div>
     </main>
-
+    <footer id="footer">
+        <div id="nav2">
+            <a href="https://www.linkedin.com/in/robin-davidsson/" id="linkedIn">LinkedIn </a>
+            <a href="https://www.facebook.com/robin.davidsson.1" id="facebook">Facebook </a>
+            <a href="https://github.com/Vanillj" id="github">Github </a>
+            <a href="#" id="twitter">Twitter </a>
+            <a href="mailto:Robindavidsson@outlook.com" id="mail">Mail</a>
+        </div>
+    </footer>
     <script type="text/javascript" src="scripts/aos.js"></script>
     <script type="text/javascript">
         AOS.init();
